Updated stylesheet structure, partials available

--- a/scss/bootstrap-extend.scss
+++ b/scss/bootstrap-extend.scss
@@ -1,691 +1,10 @@
 //=====================================================================
-//  Global Variable Definitions
-//========================Extended .btn-default========================
-$shadeWhite:      #fff;     $shadeLightGray:  #eee;   
-$shadeDarkGray:   #ccc;     $shadeBlackGray:  #555;
-//========================Extended .btn-primary========================
-$shadeBlue:       #337ab7;  $shadeDarkBlue:   #2e6da4;
-//========================Extended .btn-success========================
-$shadeGreen:      #5cb85c;  $shadeDarkGreen:  #4cae4c;
-//========================Extended .btn-info===========================
-$shadeCyan:       #5bc0de;  $shadeDarkCyan:   #46b8da;
-//========================Extended .btn-warning========================
-$shadeOrange:     #f0ad4e;  $shadeDarkOrange: #eea236;
-//========================Extended .btn-danger=========================
-$shadeRed:        #d9534f;  $shadeDarkRed:    #d43f3a;
-//=========================Custom .btn-notice==========================
-$shadePurple:     #9783b9;  $shadeDarkPurple: #6f5499;
+//  Refer to individual files for information and components
 //=====================================================================
-//  Mixins
-//=====================================================================
-// Button variants mixin (from Bootstrap/mixins/_buttons.scss)
-//
-// Easily pump out default styles, as well as :hover, :focus, :active,
-// and disabled options for all buttons
-//=====================================================================
-@mixin button-variant($color, $background, $border){
-  color: $color;
-  background-color: $background;
-  border-color: $border;
-
-  &:focus,
-  &.focus {
-    color: $color;
-    background-color: darken($background, 10%);
-        border-color: darken($border, 25%);
-  }
-  &:hover {
-    color: $color;
-    background-color: darken($background, 10%);
-        border-color: darken($border, 12%);
-  }
-  &:active,
-  &.active,
-  .open > &.dropdown-toggle {
-    color: $color;
-    background-color: darken($background, 10%);
-        border-color: darken($border, 12%);
-
-    &:hover,
-    &:focus,
-    &.focus {
-      color: $color;
-      background-color: darken($background, 17%);
-          border-color: darken($border, 25%);
-    }
-  }
-  &:active,
-  &.active,
-  .open > &.dropdown-toggle {
-    background-image: none;
-  }
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    &:hover,
-    &:focus,
-    &.focus {
-      background-color: $background;
-          border-color: $border;
-    }
-  }
-
-  .badge {
-    color: $background;
-    background-color: $color;
-  }
-}
-//=====================================================================
-// Checkbox variants mixin
-//
-// Easily pump out default styles, as well as :hover, :focus and 
-// disabled options for all checkboxes
-//=====================================================================
-@mixin checkbox-variant($color, $background, $border){
-  +label{
-    &:before{
-      border: 1px solid $border;
-    }
-    &:hover::before, &:focus::before, &.focus:before{
-      border: 1px solid darken($background, 25%);
-      color: $background !important;
-    }
-  }
-  &:checked{
-    &+label{
-      &:before{
-        color: $color;
-        background: $background !important;
-      }
-      &:hover::before, &:focus::before, &.focus:before{
-        color: darken($color, 10%) !important;
-        background: darken($background, 10%) !important;
-      }
-    }
-  }
-  &.disabled, &.disabled:checked, &[disabled], &[disabled]:checked,
-  fieldset[disabled]:checked &, fieldset[disabled] & {
-    +label{
-      &,&:hover::before,&:focus::before,&.focus:before,
-      &:before, &:hover, &:focus, &.focus {
-        cursor: not-allowed;
-        opacity: .65;
-      }
-    }
-  }
-}
-//=====================================================================
-// Radio button variants mixin
-//
-// Easily pump out default styles, as well as :hover, :focus and 
-// disabled options for all radio buttons
-//=====================================================================
-@mixin radio-variant($color, $background, $border){
-  +label{
-    &:before{
-      border: 1px solid $border;
-    }
-    &:hover::before, &:focus::before, &.focus:before{
-      border: 1px solid darken($background, 25%);
-      color: $background !important;
-      background: $background !important;
-      box-shadow: inset 0px 0px 0px 3px $color;
-    }
-  }
-  &:checked{
-    &+label{
-      &:before{
-        color: $color;
-        background: $background !important;
-      }
-      &:hover::before, &:focus::before, &.focus:before{
-        color: darken($color, 10%) !important;
-        background: darken($background, 10%) !important;
-      }
-    }
-  }
-  &.disabled, &.disabled:checked, &[disabled], &[disabled]:checked,
-  fieldset[disabled]:checked &, fieldset[disabled] & {
-    +label{
-      &,&:hover::before,&:focus::before,&.focus:before,
-      &:before, &:hover, &:focus, &.focus {
-        cursor: not-allowed;
-        opacity: .65;
-      }
-    }
-  }
-}
-//=====================================================================
-// Switch variants mixins (round and square)
-//
-// Easily pump out default styles, as well as :hover, :focus and 
-// disabled options for all switches
-//=====================================================================
-@mixin switch-round-variant ($color, $border){
-  &+label{
-    padding: 2px;
-    width: 56px;
-    height: 28px;
-    background-color: $shadeDarkGray;
-    border-radius: 26px;
-    transition: background 0.4s;
-    &:before, &:after{
-      display: block;
-      position: absolute;
-      content: "";
-    }
-    &:before{
-      top: 1px;
-      left: 1px;
-      bottom: 1px;
-      right: 1px;
-      background-color: $shadeWhite;
-      border-radius: 26px;
-      transition: background 0.4s;
-      color: $shadeDarkGray;
-    }
-    &:after{
-      top: 4px;
-      left: 4px;
-      bottom: 4px;
-      width: 21px;
-      background-color: $shadeDarkGray;
-      border-radius: 26px;
-      transition: margin 0.4s, background 0.4s;
-    }
-    &:hover, &:focus, &.focus{
-      background-color: darken($shadeDarkGray,25%);
-      &:after{
-        background-color: darken($shadeDarkGray, 10%);
-      }
-      &:before{
-        color: darken($shadeDarkGray, 10%);
-      }
-    }
-  }
-  &:checked{
-    &+label{
-      background-color: $border;
-      &:before{
-        color: $color;
-      }
-      &:after{
-        margin-left: 27px;
-        background-color: $color;
-      }
-      &:hover, &:focus, &.focus{
-        background-color: darken($border,25%);
-        &:after{
-          background-color: darken($color, 10%);
-        }
-        &:before{
-          color: darken($color, 10%);
-        }
-      }
-    }
-  }
-  &.switch-io{
-    &+label{
-      &:before{
-        content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0O";
-        font-size: 17px;
-      }
-    }
-    &:checked{
-      &+label{
-        &:before{
-          content: "\00a0\00a0I";
-          font-size: 17px;
-        }
-      }
-    }
-  }
-  &.switch-on-off{
-    &+label{
-      &:before{
-        content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0OFF";
-        font-size: 12px;
-        line-height: 2.14;
-      }
-    }
-    &:checked{
-      &+label{
-        &:before{
-          content: "\00a0\00a0ON";
-          font-size: 12px;
-          line-height: 2.14;
-        }
-      }
-    }
-  }
-  &.switch-yes-no{
-    &+label{
-      &:before{
-        content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0NO";
-        font-size: 12px;
-        line-height: 2.14;
-      }
-    }
-    &:checked{
-      &+label{
-        &:before{
-          content: "\00a0\00a0YES";
-          font-size: 12px;
-          line-height: 2.14;
-        }
-      }
-    }
-  }
-  &.disabled, &.disabled:checked, &[disabled], &[disabled]:checked,
-  fieldset[disabled]:checked &, fieldset[disabled] & {
-    +label{
-      &,&:hover::before,&:focus::before,&.focus:before,
-      &:before, &:hover, &:focus, &.focus {
-        cursor: not-allowed;
-        opacity: .65;
-      }
-    }
-  }
-}
-@mixin switch-rect-variant ($color, $border){
-  &+label{
-    padding: 2px;
-    width: 56px;
-    height: 28px;
-    background-color: $shadeDarkGray;
-    border-radius: 4px;
-    transition: background 0.4s;
-    &:before, &:after{
-      display: block;
-      position: absolute;
-      content: "";
-    }
-    &:before{
-      top: 1px;
-      left: 1px;
-      bottom: 1px;
-      right: 1px;
-      background-color: $shadeWhite;
-      border-radius: 4px;
-      transition: background 0.4s;
-      color: $shadeDarkGray;
-    }
-    &:after{
-      top: 4px;
-      left: 4px;
-      bottom: 4px;
-      width: 21px;
-      background-color: $shadeDarkGray;
-      border-radius: 4px;
-      transition: margin 0.4s, background 0.4s;
-    }
-    &:hover, &:focus, &.focus{
-      background-color: darken($shadeDarkGray,25%);
-      &:after{
-        background-color: darken($shadeDarkGray, 10%);
-      }
-      &:before{
-        color: darken($shadeDarkGray, 10%);
-      }
-    }
-  }
-  &:checked{
-    &+label{
-      background-color: $border;
-      &:before{
-        color: $color;
-      }
-      &:after{
-        margin-left: 27px;
-        background-color: $color;
-      }
-      &:hover, &:focus, &.focus{
-        background-color: darken($border,25%);
-        &:after{
-          background-color: darken($color, 10%);
-        }
-        &:before{
-          color: darken($color, 10%);
-        }
-      }
-    }
-  }
-  &.switch-io{
-    &+label{
-      &:before{
-        content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0O";
-        font-size: 17px;
-        line-height: 1.5;
-      }
-    }
-    &:checked{
-      &+label{
-        &:before{
-          content: "\00a0I";
-          font-size: 17px;
-          line-height: 1.5;
-        }
-      }
-    }
-  }
-  &.switch-on-off{
-    &+label{
-      &:before{
-        content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0OFF";
-        font-size: 12px;
-        line-height: 2.14;
-      }
-    }
-    &:checked{
-      &+label{
-        &:before{
-          content: "\00a0ON";
-          font-size: 12px;
-          line-height: 2.14;
-        }
-      }
-    }
-  }
-  &.switch-yes-no{
-    &+label{
-      &:before{
-        content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0NO";
-        font-size: 12px;
-        line-height: 2.14;
-      }
-    }
-    &:checked{
-      &+label{
-        &:before{
-          content: "\00a0YES";
-          font-size: 12px;
-          line-height: 2.14;
-        }
-      }
-    }
-  }
-  &.disabled, &.disabled:checked, &[disabled], &[disabled]:checked,
-  fieldset[disabled]:checked &, fieldset[disabled] & {
-    +label{
-      &,&:hover::before,&:focus::before,&.focus:before,
-      &:before, &:hover, &:focus, &.focus {
-        cursor: not-allowed;
-        opacity: .65;
-      }
-    }
-  }
-}
-//=====================================================================
-//  Button Notice Style
-//=====================================================================
-.btn-notice {
-  @include button-variant($shadeWhite,$shadePurple, $shadeDarkPurple);
-}
-//=====================================================================
-//  Password Toggle
-//=====================================================================
-.pwd-toggle, .pwd-untoggle{
-  cursor: pointer;
-  color: $shadeWhite;
-  background-color: $shadeCyan;
-  border-color: $shadeDarkCyan;
-  &:hover, &:active, &:focus, &.focus, &.active{
-    background-color: darken($shadeCyan, 10%);
-    border-color: darken($shadeDarkCyan, 25%);
-  }
-  &:before{
-    font-family: 'Glyphicons Halflings';
-    font-size: 16px;
-  }
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    &:hover,
-    &:focus,
-    &.focus {
-      cursor: not-allowed;
-        opacity: .65;
-    }
-  }
-}
-.pwd-toggle:before{
-  content: "\e105";
-}
-.pwd-untoggle:before{
-  content: "\e106";
-}
-//=====================================================================
-//  Collapse Button
-//=====================================================================
-.btn.btn-toggle:before{
-    content: "+";
-}
-.btn.btn-untoggle:before{
-  content: "\2212";
-}
-.btn.btn-toggle, .btn.btn-untoggle{
-  font-size: 18px;
-  line-height: 1.111111112222222;
-  &+label{
-    margin-left: 12px;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
-  }
-}
-//=====================================================================
-//  Checkbox Styles
-//=====================================================================
-input[type="checkbox"].chkbox{
-  opacity: 0;
-  display: inline-block;
-  vertical-align: middle;
-  margin: 5px;
-  cursor: pointer;
-  position: absolute;
-  &+label{
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    margin: 5px;
-    cursor: pointer;
-    &:before{
-      content: '';
-      background: $shadeWhite;
-      border-radius: 4px;
-      display: inline-block;
-      vertical-align: middle;
-      width: 28px;
-      height: 28px;
-      padding: 2px;
-      margin-right: 10px;
-      text-align: center;
-    }
-    &:hover::before{
-      content: "\e013";
-      font-family: 'Glyphicons Halflings';
-    }
-  }
-  &:checked{
-    &+label{
-      &:before{
-        content: "\e013";
-        font-family: 'Glyphicons Halflings';
-      }
-    }
-  }
-}
-.chkbox-default{
-  @include checkbox-variant($shadeBlackGray,$shadeWhite, $shadeDarkGray);
-  +label{
-   &:hover::before, &:focus::before, &.focus::before{
-      color: $shadeBlackGray !important;
-    }
-  }
-}
-.chkbox-primary{
-  @include checkbox-variant($shadeWhite,$shadeBlue, $shadeDarkBlue);
-}
-.chkbox-success{
-  @include checkbox-variant($shadeWhite,$shadeGreen, $shadeDarkGreen);
-}
-.chkbox-info{
-  @include checkbox-variant($shadeWhite,$shadeCyan, $shadeDarkCyan);
-}
-.chkbox-warning{
-  @include checkbox-variant($shadeWhite,$shadeOrange, $shadeDarkOrange);
-}
-.chkbox-danger{
-  @include checkbox-variant($shadeWhite,$shadeRed, $shadeDarkRed);
-}
-.chkbox-notice{
-   @include checkbox-variant($shadeWhite,$shadePurple, $shadeDarkPurple);
-}
-//=====================================================================
-//  Radio Button Styles
-//=====================================================================
-input[type="radio"].rdbtn {
-  opacity: 0;
-  position: absolute;
-  display: inline-block;
-  vertical-align: middle;
-  margin: 5px;
-  cursor: pointer;
-  &+label{
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    margin: 5px;
-    cursor: pointer;
-    &:before{
-      content: '';
-      background: $shadeWhite;
-      border-radius: 4px;
-      display: inline-block;
-      vertical-align: middle;
-      width: 24px;
-      height: 24px;
-      padding: 2px;
-      margin-right: 10px;
-      text-align: center;
-      border-radius: 50%;
-    }
-  }
-  &:checked{
-    &+label{
-      &:before{
-        box-shadow: inset 0px 0px 0px 3px $shadeWhite;
-      }
-    }
-  }
-}
-.rdbtn-default{
-  @include radio-variant($shadeLightGray, $shadeWhite, $shadeDarkGray);
-  +label{
-   &:hover::before, &:focus::before, &.focus::before{
-      background: darken($shadeLightGray, 25%) !important;
-      box-shadow: inset 0px 0px 0px 3px $shadeWhite !important;
-    }
-  }
-  &:checked{
-    &+label{
-      &:before{
-        background: darken($shadeDarkGray, 25%) !important;
-      }
-      &:hover::before, &:focus::before, &.focus:before{      
-        background: darken($shadeDarkGray, 37%) !important;
-      }
-    }
-  }
-}
-.rdbtn-primary{
-  @include radio-variant($shadeWhite,$shadeBlue, $shadeDarkBlue);
-}
-.rdbtn-success{
-  @include radio-variant($shadeWhite,$shadeGreen, $shadeDarkGreen);
-}
-.rdbtn-info{
-  @include radio-variant($shadeWhite,$shadeCyan, $shadeDarkCyan);
-}
-.rdbtn-warning{
-  @include radio-variant($shadeWhite,$shadeOrange, $shadeDarkOrange);
-}
-.rdbtn-danger{
-  @include radio-variant($shadeWhite,$shadeRed, $shadeDarkRed);
-}
-.rdbtn-notice{
-   @include radio-variant($shadeWhite,$shadePurple, $shadeDarkPurple);
-}
-//=====================================================================
-//  Toggle Switch Styles
-//=====================================================================
-input[type="radio"].switch, input[type="checkbox"].switch{
-  position: absolute;
-  margin-left: -9999px;
-  visibility: hidden;
-  &+label{
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    outline: none;
-    user-select: none;
-  }
-}
-.switch-rect-default{
-  @include switch-rect-variant($shadeBlackGray,$shadeDarkGray);
-  &:checked{
-    &+label{
-      background-color: $shadeBlackGray;
-      &:hover{
-        background-color: darken($shadeBlackGray,25%);
-      }
-    }
-  }
-}
-.switch-rect-primary{
-  @include switch-rect-variant($shadeBlue,$shadeDarkBlue);
-}
-.switch-rect-success{
-  @include switch-rect-variant($shadeGreen,$shadeDarkGreen);
-}
-.switch-rect-info{
-  @include switch-rect-variant($shadeCyan,$shadeDarkCyan);
-}
-.switch-rect-warning{
-  @include switch-rect-variant($shadeOrange,$shadeDarkOrange);
-}
-.switch-rect-danger{
-  @include switch-rect-variant($shadeRed,$shadeDarkRed);
-}
-.switch-rect-notice{
-  @include switch-rect-variant($shadePurple,$shadeDarkPurple);
-}
-.switch-round-default{
-  @include switch-round-variant($shadeBlackGray,$shadeDarkGray);
-  &:checked{
-    &+label{
-      background-color: $shadeBlackGray;
-      &:hover{
-        background-color: darken($shadeBlackGray,25%);
-      }
-    }
-  }
-}
-.switch-round-primary{
-  @include switch-round-variant($shadeBlue,$shadeDarkBlue);
-}
-.switch-round-success{
-  @include switch-round-variant($shadeGreen,$shadeDarkGreen);
-}
-.switch-round-info{
-  @include switch-round-variant($shadeCyan,$shadeDarkCyan);
-}
-.switch-round-warning{
-  @include switch-round-variant($shadeOrange,$shadeDarkOrange);
-}
-.switch-round-danger{
-  @include switch-round-variant($shadeRed,$shadeDarkRed);
-}
-.switch-round-notice{
-  @include switch-round-variant($shadePurple,$shadeDarkPurple);
-}
+@import 'extend/variables';
+@import 'extend/buttons';
+@import 'extend/checkboxes';
+@import 'extend/radiobuttons';
+@import 'extend/switches';
+@import 'extend/pwdtoggle';
+@import 'extend/collapsetoggle';
