Javascript files housekeeping and lightbox implementation

--- a/scss/extend/_collapsetoggle.scss
+++ b/scss/extend/_collapsetoggle.scss
@@ -1,5 +1,6 @@
 //=====================================================================
 //  Collapse Button - Requires Javascript to function properly
+//    Linked Javascript file: (collapsetoggle.js)
 //=====================================================================
 .btn.btn-toggle:before{
     content: "+";
