--- a/scss/extend/_pwdtoggle.scss
+++ b/scss/extend/_pwdtoggle.scss
@@ -1,5 +1,6 @@
 //=====================================================================
-//  Password Toggle - Requires Javascript to function properly
+//  Password Toggle - Requires Javascript to function properly 
+//    Linked Javascript file: (pwdtoggle.js)
 //=====================================================================
 .pwd-toggle, .pwd-untoggle{
   cursor: pointer;
