--- a/scss/extend/_collapsetoggle.scss
+++ b/scss/extend/_collapsetoggle.scss
@@ -3,14 +3,17 @@
 //    Linked Javascript file: (collapsetoggle.js)
 //=====================================================================
 .btn.btn-toggle:before{
-    content: "+";
+    font-family: 'Glyphicons Halflings';
+    content: "\002b";
 }
 .btn.btn-untoggle:before{
+  font-family: 'Glyphicons Halflings';
   content: "\2212";
 }
 .btn.btn-toggle, .btn.btn-untoggle{
-  font-size: 18px;
-  line-height: 1.111111112222222;
+  font-size: 14px;
+  line-height: 1.58465306;
+  font-weight: 200;
   &+label{
     margin-left: 12px;
     font-size: 16px;
